--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,9 +12,16 @@ FetchContent_Declare(
 FetchContent_MakeAvailable(eigen)
 
 if(DEFINED SKBUILD)
-  # ... Fill me in!
+  find_package(Python REQUIRED COMPONENTS Interpreter Development)
+  find_package(pybind11 CONFIG REQUIRED)
+  pybind11_add_module(_core src/_core.cpp)
+  target_include_directories(_core PRIVATE src "${eigen_SOURCE_DIR}")  
+  target_compile_features(_core PRIVATE cxx_std_11)
+  install(TARGETS _core DESTINATION "${SKBUILD_PROJECT_NAME})
+
 else()
   add_executable(main src/main.cpp src/integrator.hpp)
   target_include_directories(main PRIVATE src "${eigen_SOURCE_DIR}")
   target_compile_features(main PRIVATE cxx_std_11)
 endif()
+
